--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
     "node-sass": "^4.14.1",
     "vue": "^3.2.13",
