--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sortablejs": "^1.15.0",
     "sortablejs-vue3": "^1.0.1",
     "vue": "^3.2.13",
+    "vue-dndrop": "^1.2.7",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
