--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "click-outside-vue3": "^4.0.1",
     "core-js": "^3.8.3",
     "node-sass": "^4.14.1",
     "sortablejs": "^1.15.0",
     "sortablejs-vue3": "^1.0.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-dndrop": "^1.2.7",
     "vuedraggable": "^4.1.0"
   },
