--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-dndrop": "^1.2.7",
+    "vue-draggable-next": "^2.1.1",
     "vue-loading-spinner": "^1.0.11",
     "vuedraggable": "^4.1.0"
   },
